Fixed problems with dark mode

--- a/src/app/spotbie/spotbie-logged-in/my-meet-ups/meet-up-wizard/meet-up-wizard.component.scss
+++ b/src/app/spotbie/spotbie-logged-in/my-meet-ups/meet-up-wizard/meet-up-wizard.component.scss
@@ -25,3 +25,15 @@
     padding-right: 5px;
   }
 }
+
+ion-list {
+  background-color: #222428 !important;
+  background: #222428 !important;
+  --background: #222428 !important;
+}
+
+ion-item {
+  background-color: #222428 !important;
+  background: #222428 !important;
+  --background: #222428 !important;
+}
